--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mysql2": "^3.2.3"
+    "mysql2": "^3.2.3",
+    "uuidv4": "^6.2.13"
   },
   "type": "module"
 }
