--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql2": "^3.2.3",
     "uuidv4": "^6.2.13"
   },
