--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mysql2": "^3.2.3",
+    "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
   "type": "module"
